# pigiaminja

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  pigiaminja.control
.github/workflows/: docker-build-push.yml
benchmark/: bench.py  flamegraph.py  profile.py
examples/: export.py  export_server_side.sql  row.html.jinja
src/: lib.rs
src/copy_hook/: copy_to.rs  dest_receiver.rs  hook.rs  mod.rs  output.rs  pg_compat.rs
src/pgrx_tests/: mod.rs
test-scripts/: 00_verify_placeholder.sql  01_basic_tests.sql  02_advanced_tests.sql  03_jinja_templating_test.sql  create_test_templates.sh  manual_test_commands.sql
tests/: test_copy_jinja.py
