[package]
name = "pigiaminja"
version = "0.1.0"
edition = "2021"
license = "PostgreSQL"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pigiaminja"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg_test = []

[dependencies]
pgrx = "=0.16.1"
minijinja = { version = "2.5", features = ["loader"] }
serde_json = "1"

[dev-dependencies]
pgrx-tests = "=0.16.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

# Build with: CARGO_PROFILE_RELEASE_DEBUG=2 cargo pgrx install --release ...
# This profile is for standalone Cargo builds (not pgrx install).
[profile.profiling]
inherits = "release"
debug = 2